feat: fill information from resume file into index.html

--- a/index.html
+++ b/index.html
@@ -7,20 +7,60 @@
     <title>Document</title>
 </head>
 <body>
-    <h6></h6>
-    <div></div>
-    <p></p>
-    <div></div>
-    <p></p>
-    <div></div>
-    <p></p>
-    <div></div>
-    <p></p>
-    <div></div>
-    <p></p>
-    <div></div>
-    <p></p>
-    <div></div>
+    <h2>Andrei Vinogradov</h2>
+    <div>
+        <h4>Contacts</h4>
+        <p>Location: Saint-Petersburg, Russia <br>
+            Email: andreyv@live.com <br>
+            GitHub: Andrey178</p>
+    </div>
+    <div>
+        <h4>About Me</h4>
+        <p>Now I'm learning JavaScript programming language.</p>
+    </div>
+    <div>
+        <h4>Skills</h4>
+        <ul>
+            <li>Python</li>
+            <li>Docker</li>
+            <li>Linux</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Git</li>
+            <li>Jira</li>
+        </ul>
+        <p></p>
+    </div>
+    <div>
+        <h4>Code Example</h4>
+        <p>console.log('Hello world!');</p>
+        <p>print('Hello wor</p>
+    </div>
+    <div>
+        <h4>Work experience:</h4>
+        <p>IT Support</p>
+    </div>
+    <div>
+        <h4>Education</h4>
+        <ul>
+            <li><p>Courses</p>
+                <li>Stepik</li>
+                <li>Leetcode</li>
+                <li>Codewars</li>
+                <li>Datacamp</li>
+                <li>SoloLearn</li>
+                <li>FreeCodeCamp</li>
+                <li>HTML Academy</li>
+                <li>Skillbox</li>
+            </li>
+        </ul>
+        <p></p>
+    </div>
+    <div>
+        <h4>English</h4>
+        <p>Strong B2 (Upper Intermediate)</p>
+    </div>
     <p></p>
 </body>
 </html>
