--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <body>
     <h2>Andrei Vinogradov</h2>
     <div>
-        <h4>Contacts</h4>
+        <p><b>Contacts</b></p>
         <p>Location: Saint-Petersburg, Russia <br>
             Email: andreyv@live.com <br>
             GitHub: Andrey178</p>
     </div>
     <div>
-        <h4>About Me</h4>
+        <p><b>About Me</b></p>
         <p>Now I'm learning JavaScript programming language.</p>
     </div>
     <div>
-        <h4>Skills</h4>
+        <p><b>Skills</b></p>
         <ul>
             <li>Python</li>
             <li>Docker</li>
@@ -33,16 +33,16 @@
         <p></p>
     </div>
     <div>
-        <h4>Code Example</h4>
+        <p><b>Code Example</b></p>
         <p>console.log('Hello world!');</p>
         <p>print('Hello wor</p>
     </div>
     <div>
-        <h4>Work experience:</h4>
+        <p><b>Work experience:</b></p>
         <p>IT Support</p>
     </div>
     <div>
-        <h4>Education</h4>
+        <p><b>Education</b></p>
         <ul>
             <li><p>Courses</p>
                 <li>Stepik</li>
@@ -58,7 +58,7 @@
         <p></p>
     </div>
     <div>
-        <h4>English</h4>
+        <p><b>English</b></p>
         <p>Strong B2 (Upper Intermediate)</p>
     </div>
     <p></p>
