refactor: correct validity error with list

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     <div>
         <p><b>Education</b></p>
         <ul>
-            <li><p>Courses</p>
+            <li>Courses
+                <ul>
                 <li>Stepik</li>
                 <li>Leetcode</li>
                 <li>Codewars</li>
@@ -53,14 +54,13 @@
                 <li>FreeCodeCamp</li>
                 <li>HTML Academy</li>
                 <li>Skillbox</li>
+                </ul>
             </li>
         </ul>
-        <p></p>
     </div>
     <div>
         <p><b>English</b></p>
         <p>Strong B2 (Upper Intermediate)</p>
     </div>
-    <p></p>
 </body>
 </html>
