fix: correct text in Code Example part

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <div>
         <p><b>Code Example</b></p>
         <p>console.log('Hello world!');</p>
-        <p>print('Hello wor</p>
+        <p>print('Hello world!')</p>
+        <p>echo 'Hello world!'</p>
     </div>
     <div>
         <p><b>Work experience:</b></p>
