--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <li class="nav-item"><a href="#language" class="nav-link">Language</a></li>
         </ul>
     </nav>
-    <main class="main">
+    <main class="main main-container">
         <div class="container"></div>
-            <section class="section-item">
-                <h2 id='contacts'>Contacts</h2>
+            <section class="section">
+                <h2 id='contacts' class="section-title">Contacts</h2>
                 <p>Current location: Saint-Petersburg, Russia</p>
                 <ul>
                     <li>
@@ -41,12 +41,12 @@
                 </ul><p> <br> <br>
                     </p>
             </section>
-            <section class="section-item">
-                <h2 id='aboutMe'>About Me</h2>
+            <section class="section">
+                <h2 id='aboutMe' class="section-title">About Me</h2>
                 <p>Now I'm learning JavaScript programming language.</p>
             </section>
-            <section class="section-item">
-                <h2 id='skills'>Skills</h2>
+            <section class="section">
+                <h2 id='skills' class="section-title">Skills</h2>
                 <ul>
                     <li>Python</li>
                     <li>Docker</li>
@@ -59,18 +59,18 @@
                 </ul>
                 
             </section>
-            <section class="section-item code">
-                <h2 id='codeExample'>Code Example</h2>
+            <section class="section code">
+                <h2 id='codeExample' class="section-title">Code Example</h2>
                 <p><code class="code">console.log('Hello world!');</code></p>
                 <p><code class="code">print('Hello world!')</code></p>
                 <p><code class="code">echo 'Hello world!'</code></p>
             </section>
-            <section class="section-item">
-                <h2 id='workExperience'>Work experience:</h2>
+            <section class="section">
+                <h2 id='workExperience' class="section-title">Work experience:</h2>
                 <p>IT Support</p>
             </section>
-            <section class="section-item">
-                <h2 id='education'>Education</h2>
+            <section class="section">
+                <h2 id='education' class="section-title">Education</h2>
                 <ul>
                     <li>Courses
                         <ul>
@@ -86,12 +86,12 @@
                     </li>
                 </ul>
             </section>
-            <section class="section-item">
-                <h2 id='projectsMade'>Projects made</h2>
+            <section class="section">
+                <h2 id='projectsMade' class="section-title">Projects made</h2>
                 <p><a href="https://github.com/Andrey178/Stepik82067">SPA web-site on Django Rest Framework and NuxtJS</a></p>
             </section>
-            <section class="section-item">
-                <h2 id='language'>English</h2>
+            <section class="section">
+                <h2 id='language' class="section-title">English</h2>
                 <p>Strong B2 (Upper Intermediate)</p>
             </section>
         </div>
